# Kairo

./: .dockerignore  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  Dockerfile.agent-python  Makefile  ORCHESTRATOR_PLAN.md  README.md  SECURITY.md  TRIGGER_PHRASES.md  docker-compose.yml  eval-report.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/assistant/: __init__.py
backend/assistant/http/: __init__.py  auth.py  demo_web.py  pm_app.py  rate_limit.py
backend/assistant/orchestrator/: __init__.py  agent.py  harness.py  memory.py  prompts.py  router.py  translator.py
backend/assistant/persistence/: user_store.py
backend/assistant/personal_manager/: ARCHITECTURE.md  PERSONAL_MANAGER_AGENT_VERSIONS.md  __init__.py  agent.py  agent_tools.py  workflow.py
backend/assistant/personal_manager/application/: approval_flow.py  approval_policy.py  clarification.py  contextual_scheduling.py  extraction.py  field_completion.py  memory_query.py  planner.py  reconciliation.py  (+4 more)
backend/assistant/shared/: __init__.py  agent_trace.py  history.py  llm_env.py  search.py  sync_executor.py  usage.py
backend/assistant/storage/: __init__.py
backend/scripts/: demo_walkthrough.py  seed_demo.py
backend/tests/: conftest.py  test_auth_routes.py  test_cors.py  test_demo_web_security.py  test_google_calendar_integration.py  test_llm_env.py  test_orchestrator.py  test_pm_adversarial.py  test_pm_eval_runner.py  test_pm_prompts.py  test_pm_store.py  test_pm_workflow.py
backend/tests/fixtures/: pm_eval_cases.json
(+77 files in other folders)
